--- a/manifest.json
+++ b/manifest.json
@@ -1,28 +1,28 @@
 {
-    "name": "E-POKRATE",
-    "short_name": "E-POKRATE",
+    "name": "Bienvenu sur e-POKRATE",
+    "short_name": "e-POKRATE",
     "icons": [{
-        "src": "images/EPK-icon-128x128.png",
+        "src": "assets/images/EPK-icon-128x128.png",
         "sizes": "128x128",
         "type": "image/png"
     }, {
-        "src": "images/EPK-icon-144x144.png",
+        "src": "assets/images/EPK-icon-144x144.png",
         "sizes": "144x144",
         "type": "image/png"
     }, {
-        "src": "images/EPK-icon-152x152.png",
+        "src": "assets/images/EPK-icon-152x152.png",
         "sizes": "152x152",
         "type": "image/png"
     }, {
-        "src": "images/EPK-icon-192x192.png",
+        "src": "assets/images/EPK-icon-192x192.png",
         "sizes": "192x192",
         "type": "image/png"
     }, {
-        "src": "images/EPK-icon-256x256.png",
+        "src": "assets/images/EPK-icon-256x256.png",
         "sizes": "256x256",
         "type": "image/png"
     }, {
-        "src": "images/EPK-icon-512x512.png",
+        "src": "assets/images/EPK-icon-512x512.png",
         "sizes": "512x512",
         "type": "image/png"
     }],
