Modification du fichier manifest.json et sw.js

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "E-POKRATE",
-    "short_name": "E-POKRATE",
+    "name": "Bienvenue sur e-POKRATE",
+    "short_name": "e-POKRATE",
     "icons": [{
         "src": "images/EPK-icon-128x128.png",
         "sizes": "128x128",
